--- a/Rmd/references.bib
+++ b/Rmd/references.bib
@@ -28,3 +28,14 @@
   year={2017},
   publisher={ERIC}
 }
+
+  @Article{van2011mice,
+    title = {{mice}: Multivariate Imputation by Chained Equations in R},
+    author = {Stef {van Buuren} and Karin Groothuis-Oudshoorn},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {45},
+    number = {3},
+    pages = {1-67},
+    url = {https://www.jstatsoft.org/v45/i03/},
+  }
