Replace vowel and consonant similarity with Levenshtein distance and add interactions

--- a/Rmd/references.bib
+++ b/Rmd/references.bib
@@ -18,6 +18,18 @@
   year={2017}
 }
 
+ @Article{loo2014stringdist,
+    title = {The stringdist package for approximate string matching},
+    author = {M.P.J. {van der Loo}},
+    year = {2014},
+    journal = {The {R} {J}ournal},
+    volume = {6},
+    issue = {1},
+    url = {https://CRAN.R-project.org/package=stringdist},
+    pages = {111-122},
+  }
+
+
 @article{carpenter2017stan,
   title={Stan: a probabilistic programming language.},
   author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus A and Guo, Jiqiang and Li, Peter and Riddell, Allen},
